<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explora">

    <fragment
        android:id="@+id/navigation_agenda"
        android:name="com.example.jobly.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.example.jobly.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_explora"
        android:name="com.example.jobly.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_mensajes"
        android:name="com.example.jobly.ui.MensajesFragment"
        android:label="fragment_mensajes"
        tools:layout="@layout/fragment_mensajes" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.jobly.ui.PerfilFragment"
        android:label="fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>